<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/back"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BookDetailsActivity">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="#607D8B"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/image"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/image"
                    android:src="@drawable/joker" />
                <TextView
                    android:id="@+id/detailbookname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/image"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/detailwritername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:layout_below="@+id/detailbookname"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:textColor="#A1A9AA"
                    android:minLines="5"
                    android:maxLines="10"
                    android:layout_below="@id/detailwritername"
                    />
                <Button
                    android:id="@+id/requestbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/description"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rippleeffectforbtn"
                    android:padding="5dp"
                    android:text="@string/sentrequ"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/requestbtn"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="10dp"
                    android:text="@string/limit"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/goback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rippleeffectforbtn"
                    android:text="@string/goback"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/nointernet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/goback"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:text="@string/nointernet"
                    android:textColor="@color/nointernet"
                    android:textSize="20sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
